Fix overflow in modals
Long modals would overflow because of a change in
f2bc5fe80dae122c3b4b9de3525b60e0551dbd6a. Revert that change, but let
the goal modal overflow to prevent the date modal from being clipped.

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -24,6 +24,7 @@
   max-height: 100%;
   padding: 2rem 1.5rem;
   background: var(--color-white);
+  overflow-y: auto;
   box-shadow: 0 5px 30px -10px rgba(black, 0.2);
 
   scrollbar-width: none; /* Hide scrollbar styles Firefox */
